Update Test In ConferenceUtilsTest
Part of #13476